// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<DocumentFragment>
  <button
    class="c-button"
    data-name="button"
    type="button"
  >
    lorem ipsum dolor
  </button>
</DocumentFragment>
`;

exports[`Button renders correctly a button with a type 1`] = `
<DocumentFragment>
  <button
    class="c-button c-button--success"
    data-name="button"
    type="button"
  >
    lorem ipsum dolor
  </button>
</DocumentFragment>
`;

exports[`Button renders correctly a ghost button 1`] = `
<DocumentFragment>
  <button
    class="c-button c-button--ghost"
    data-name="button"
    type="button"
  >
    lorem ipsum dolor
  </button>
</DocumentFragment>
`;

exports[`Button renders correctly a ghost button with a type 1`] = `
<DocumentFragment>
  <button
    class="c-button c-button--ghost-success"
    data-name="button"
    type="button"
  >
    lorem ipsum dolor
  </button>
</DocumentFragment>
`;
